Bug 69321 - starting openCL crashes/boots system
Summary: starting openCL crashes/boots system
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/Gallium/r600 (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Default DRI bug account
QA Contact:
URL:
Whiteboard:
Keywords:
: 69328 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-09-13 14:43 UTC by udo
Modified: 2013-11-22 00:37 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
Fix (2.84 KB, patch)
2013-11-20 03:51 UTC, Tom Stellard
Details | Splinter Review

Description udo 2013-09-13 14:43:50 UTC
git mesa, git llvm, git libclc on Fedora 19 w/ kernel.org 3.10.x
start bfgminer with openCL enabled and box crashes/boots the PC
A10-5800K w/ ARUBA graphics (Cayman)

This worked OK say 10 days ago.
Comment 1 udo 2013-09-13 14:47:20 UTC
Got no logging yet (dmesg, messages, xorg.0.log)
Comment 2 Alex Deucher 2013-09-13 14:49:42 UTC
Can you bisect?
Comment 3 udo 2013-09-13 17:39:31 UTC
Trying to find a working commit first.
Comment 4 udo 2013-09-17 12:54:46 UTC
 mesa]# git bisect bad
f0435ebb07d01a77ca0d98967a002898811a5206 is the first bad commit
commit f0435ebb07d01a77ca0d98967a002898811a5206
Author: Tom Stellard <thomas.stellard@amd.com>
Date:   Mon Aug 26 17:55:49 2013 -0700

    r600g/compute: Don't flush the cs in pipe_context::launch_grid()
    
    This is the state tracker's responsibility.
    
    Reviewed-by: Marek Olšák <marek.olsak@amd.com>

:040000 040000 800ca408fbce3ab20ed2ee525775ccf4af8450da bdad2d7895292c4d54838153e74f8eb1d1f4839b M	src
Comment 5 Alex Deucher 2013-09-17 16:50:19 UTC
*** Bug 69328 has been marked as a duplicate of this bug. ***
Comment 6 udo 2013-09-17 17:34:52 UTC
FWIW: https://bugs.freedesktop.org/attachment.cgi?id=85794 fixes the problem
Comment 7 udo 2013-09-21 12:38:19 UTC
Can you please commit the patch as it appears to work well.
Comment 8 Tom Stellard 2013-11-20 03:51:22 UTC
Created attachment 89507 [details] [review]
Fix

Does this patch fix the problem?
Comment 9 udo 2013-11-20 14:11:07 UTC
Yes, at least the immediate boot does not occur.
Thanks for the patch!
Comment 10 Tom Stellard 2013-11-22 00:37:44 UTC
Fixed in Mesa master commit: 7a30cd7085b6879d3858f5c1a6945fbe30c818a6


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.